Lesson 3 final commit

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -12,7 +12,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('https://udemy-images.udemy.com/course/750x422/221674_1411_4.jpg') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -24,15 +24,14 @@ body {
 }
 
 .headline h1 {
-    font-size: 130px;
+    font-size: 140px;
     background: #fff;
     background: rgba(255,255,255,0.9);
 }
 
 .headline h2 {
     font-size: 77px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
+
 }
 
 .featurette-divider {
